fix desktop alignment

--- a/styles.css
+++ b/styles.css
@@ -7,20 +7,33 @@
 
 body {
   font-family: Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
+h2 {
+  text-align: center;
+  margin-bottom: 30px;
+  font-size: 2.3rem;
+}
+
+h5 {
+  text-align: center;
+}
 /* Header styles */
 header {
   background-color: #ffffff;
   position: relative;
+  width: 100%;
 }
 
-nav {
+/* nav {
   display: flex;
   justify-content: space-around;
   align-items: center;
   padding: 20px;
-}
+} */
 button {
   background-color: #747859;
   color: #fff;
@@ -29,11 +42,27 @@ button {
   border-radius: 5px;
   cursor: pointer;
   transition: 0.5s;
+  margin-top: 3rem;
 }
 button:hover {
   background-color: #4d493c;
 }
-.logo img {
+
+section {
+  max-width: 1200px;
+  margin-bottom: 3rem;
+  padding: 1rem 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.container {
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+}
+/* .logo img {
   height: 100px;
 }
 
@@ -67,15 +96,109 @@ button:hover {
   height: 3px;
   background-color: black;
   margin: 3px;
+} */
+/* Navbar styles */
+
+.nav-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2rem;
+}
+
+.logo {
+  width: 200px;
+  height: auto;
+}
+
+.navbar {
+  background-color: #fff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding-inline: 4rem;
+}
+
+.menu-toggle {
+  display: none;
+  cursor: pointer;
+}
+
+.bar {
+  width: 30px;
+  height: 3px;
+  background-color: #333;
+  margin: 5px 0;
+  transition: 0.4s;
+}
+
+.menu {
+  list-style: none;
+  display: flex;
+}
+
+.menu li {
+  margin-right: 20px;
+}
+
+.menu li:last-child {
+  margin-right: 0;
+}
+
+.menu a {
+  text-decoration: none;
+  color: #333;
+  transition: color 0.3s;
+}
+
+.menu a:hover,
+.menu a.active {
+  color: #1abb14;
+}
+
+/* Media Queries */
+@media screen and (max-width: 768px) {
+  .nav-container {
+    flex-direction: row;
+  }
+  .navbar {
+    padding-inline: 1rem;
+  }
+  .menu-toggle {
+    display: block;
+  }
+
+  .menu {
+    display: none;
+    flex-direction: column;
+    padding: 20px;
+    background-color: #f9f9f9;
+    border-bottom: 1px solid #ddd;
+    margin-top: 138px;
+  }
+
+  .menu.open {
+    display: flex;
+  }
+  .menu a {
+    color: #ffffff;
+  }
+  .menu a:hover,
+  .menu a.active {
+    color: #1abb14;
+  }
+
+  .menu li {
+    margin-right: 0;
+    margin-bottom: 10px;
+  }
 }
 
 /* Hero section styles */
 .hero {
   text-align: center;
   color: white;
-  background-image: url(Hero\ Athens\ Therapy.jpg);
+  background-image: url(Hero_Athens_Therapy.jpg);
   background-blend-mode: overlay;
-  background-color: #333;
+  background-color: #686868;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -104,33 +227,24 @@ button:hover {
   font-size: 1.2rem;
 }
 
+/* About section styles */
 .about-me {
   background-color: #f9f9f9;
-  padding: 50px 0;
 }
 
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 15px;
-}
-
-.about-me-content {
+.about-me-image {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
 }
-
 .about-me-image img {
   max-width: 100%;
   height: auto;
   border-radius: 50%;
   margin: 1.5rem;
 }
-h5 {
-  text-align: center;
-}
+
 .about-me-text {
   text-align: justify;
   margin: 3rem;
@@ -146,26 +260,18 @@ h5 {
   line-height: 1.6;
   color: #666;
 }
+
+/* Services section styles */
 .services {
   background-color: #f5f5f5;
-  padding: 50px 0;
-}
-
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 15px;
-  display: flex;
-  justify-content: space-between;
 }
 
 .service-container {
-  width: 48%;
+  padding: 2rem;
+  max-width: 50%;
 }
-
 .service-container h2 {
   color: #333;
-  margin-bottom: 20px;
 }
 
 .service-container ul {
@@ -186,21 +292,11 @@ h5 {
   color: #777;
   font-size: 14px;
 }
+
+/* Our Space section styles */
 .our-space {
   padding: 50px 0;
   background-color: #f9f9f9;
-}
-
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 15px;
-}
-
-h2 {
-  text-align: center;
-  margin-bottom: 30px;
-  font-size: 2.3rem;
 }
 
 .gallery {
@@ -259,21 +355,11 @@ h2 {
   cursor: pointer;
 }
 
-@media screen and (max-width: 768px) {
-  .thumbnail {
-    flex: 0 0 50%;
-    max-width: 50%;
-  }
-}
+/* Faq section styles */
 .faq {
   background-color: #f9f9f9;
   padding: 50px 0;
-}
-
-.faq-container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 15px;
+  width: 100%;
 }
 
 .faq h2 {
@@ -314,85 +400,30 @@ h2 {
   border: 1px solid #ccc;
   border-radius: 5px;
 }
-
+.answer p {
+  padding: 1rem;
+}
 .question.open {
-  background-color: #e0e0e0; /* Different color when open */
+  background-color: #e0e0e0;
 }
 
-/* Responsive Styles */
-@media (max-width: 768px) {
-  .container {
-    flex-direction: column;
-  }
-
-  .service-container {
-    width: 100%;
-    margin-bottom: 30px;
-  }
-}
-
-/* Responsive Styles */
-@media (max-width: 768px) {
-  .container {
-    width: 90%;
-  }
-}
-
-/* Responsive styles */
-@media (max-width: 768px) {
-  .burger-menu {
-    display: flex;
-  }
-
-  .menu {
-    display: none;
-  }
-
-  .menu.active {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    top: 60px;
-    left: 0;
-    background-color: #4d493c;
-    width: 100%;
-    padding: 20px;
-  }
-
-  .menu.active li {
-    margin-bottom: 10px;
-  }
-}
+/* Contact section styles */
 .contact-section {
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
-  padding: 20px;
+  padding: 2rem 7rem;
+  background-color: #f9f9f9;
+  width: 100%;
 }
 
 .info-wrapper {
   flex: 1;
-  max-width: 400px;
   padding: 20px;
-  background-color: #f9f9f9;
-  margin: 10px;
 }
 
 .map-wrapper {
   flex: 1;
-  max-width: 600px;
-  margin: 10px;
-}
-
-@media (max-width: 768px) {
-  .contact-section {
-    flex-direction: column;
-  }
-
-  .info-wrapper,
-  .map-wrapper {
-    max-width: 100%;
-  }
+  height: 400px;
 }
 
 .social-icons {
@@ -418,29 +449,28 @@ h2 {
 }
 
 .social-icons ul li a:hover {
-  color: #007bff; /* Change color on hover */
+  color: #007bff;
 }
 
+/* Footer section styles */
 .footer {
   background-color: #c2dabc;
   padding: 20px 0;
   text-align: center;
-}
-
-.footer-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.left-container,
-.right-container {
-  flex: 1;
+  width: 100%;
 }
 
 .footer-logo img {
-  width: 200px; /* Adjust logo size as needed */
+  width: 200px;
   height: auto;
+}
+.left-container,
+.middle-container,
+.right-container {
+  max-width: 300px;
+  text-align: left;
+  padding: 1rem 3rem;
+  margin-inline: 3rem;
 }
 
 .subtitle {
@@ -459,4 +489,53 @@ h2 {
 .attribution {
   color: #777;
   font-size: 14px;
+}
+/* Responsive Styles */
+
+@media screen and (max-width: 768px) {
+  .burger-menu {
+    display: flex;
+  }
+
+  .menu {
+    display: none;
+  }
+
+  .menu.active {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    background-color: #4d493c;
+    width: 100%;
+    padding: 20px;
+  }
+
+  .menu.active li {
+    margin-bottom: 10px;
+  }
+  .container {
+    flex-direction: column;
+  }
+  .about-me-image img {
+    padding: 2rem;
+  }
+  .service-container {
+    width: 100%;
+    margin-bottom: 30px;
+  }
+
+  .thumbnail {
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
+  .contact-section {
+    flex-direction: column;
+  }
+
+  .info-wrapper,
+  .map-wrapper {
+    max-width: 100%;
+  }
 }
